cargo-features = ["edition2021"]

[package]
name = "ssh-keygen-ed25519-vanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.5.4"
base64 = "0.13.0"
bytebuffer-rs = "0.3.1"
ed25519-dalek = "1.0.1"

[[bin]]
name = "vanity"
path = "ssh-keygen-ed25519-vanity.rs"
