[package]
name = "ssh-keygen-ed25519-vanity"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.11.1"
base64 = "0.22.1"
bytebuffer = "2.3.0"
ed25519-dalek = "1.0.1"

[[bin]]
name = "vanity"
path = "ssh-keygen-ed25519-vanity.rs"
