[package]
name = "ssh-keygen-ed25519-vanity"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.7.3"
regex = "1.11.1"
base64 = "0.22.1"
bytebuffer = "2.3.0"
ed25519-dalek = "1.0.1"

[dependencies.clap]
version = "4.5.44"
features = ["derive"]

[[bin]]
name = "vanity"
path = "ssh-keygen-ed25519-vanity.rs"
